Fix height and overflow with the about me section

--- a/css/style.scss
+++ b/css/style.scss
@@ -55,6 +55,10 @@ main {
   display: flex;
   flex-direction: row;
 
+  @media (max-width: 850px) {
+    flex-direction: column;
+  }
+
   .about-me-text {
     padding-left: 20px;
     padding-top: 20px;
@@ -66,6 +70,9 @@ main {
   flex-direction: row;
 
   font-size: 20px;
+
+  max-width: 100%;
+  overflow: hidden;
 
   dl {
 
